[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
domain = { path = "../domain" }
drivers = { path = "../drivers" }
itertools = "0.10.3"
service = { path = "../service" }
tabled = "0.8.0"
