[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutator = "0.4.3"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "domain"
