[package]
name = "homoglyph-core"
version = "0.1.0"
edition = "2021"
authors = ["shadawck"]
description = "Domain layer for the homoglyph cli and service. Compute homoglyphs for an input sentence."
documentation = "https://docs.rs/homoglyph-core"
readme = "./README"
repository = "https://github.com/shadawck/homoglyph"
license = "MIT OR Apache-2.0"

[dependencies]
permutator = "0.4.3"
