[package]
name = "homoglyph-driver"
version = "0.1.0"
edition = "2021"
authors = ["shadawck"]
license = "MIT OR Apache-2.0"
description = ""
readme = "./README"
documentation = "https://docs.rs/homoglyph-driver"
repository = "https://github.com/shadawck/homoglyph"


[dependencies]
tantivy = { version = "0.18.0" }
homoglyph-core = { version = "0.1.0" }
dirs = "4.0.0"
