[package]
name = "homoglyph-server"
version = "0.1.0"
edition = "2021"
authors = ["shadawck"]
description = ""
readme = "./README"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/homoglyph-cli"
repository = "https://github.com/shadawck/homoglyph-server"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.144"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "54fae070" }
homoglyph-service = { version = "0.1.0", path = "../homoglyph-service" }
