[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.144"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "54fae070" }
service = { path = "../service" }
